# goldfish

./: .gitignore  CMakeLists.txt  compile.sh  dependencies.cmake  linking.cmake
assets/: black.qoi  car.qoi  chest.qoi  chest_normal.qoi  chest_reflectance.qoi  chest_specular.qoi  grass.fbx  grass.qoi  normal.qoi  parent.fbx  plane.fbx  white.qoi
assets/shaders/: default_f.glsl  default_v.glsl  light_v.glsl  skybox_v.glsl
assets/skybox/: clouds1_down.qoi  clouds1_east.qoi  clouds1_north.qoi  clouds1_south.qoi  clouds1_up.qoi  clouds1_west.qoi
include/: engineUI.h  global.h  macros.h  print.h
include/data/: dynarray.h  hashtable.h
include/ecs/: componentAllocator.h  components.h  system.h  systems.h  world.h
include/goldfish/: engineUI.h  global.h  macros.h  print.h
include/math/: float.h  matrix.h  vector.h
include/mesh/: mesh.h
include/render/: framebuffer.h  material.h  model.h  shader.h  skybox.h  vkBase.h  vkBuffer.h  vkCommandBuffer.h  vkDevice.h  vkDraw.h  vkPipeline.h  vkSwapchain.h  vkSync.h
include/structure/: hashtable.h
module/: libGLESv1_CM.suprx  libGLESv2.suprx
obsidian/psvita-opengl/: Tasks.md
obsidian/psvita-opengl/.obsidian/: community-plugins.json  workspace.json
shaders/: compile.sh  default_f.glsl  default_v.glsl
src/: camera.c  engineUI.c  fragment.glsl  global.c  main.c  matrix.c  model.c  print.c  qoi.h  shader.c  vector.c  vertex.glsl
src/data/: dynarray.c  hashtable.c
src/ecs/: componentAllocator.c  world.c
src/ecs/systems/: finishRender.c  renderModel.c  renderShadowDepthMap.c  renderSkybox.c  rendererGetCameras.c  rendererGetDirLights.c  rendererGetModels.c  rendererGetPointLights.c  rendererGetSkybox.c  rendererGetSpotLights.c  rendererOpaqueRender.c  rendererRender.c  rendererTransparentRender.c  setupCamera.c  setupTransform.c  updateCameraView.c  updateControllerData.c  updateFirstPersonTransform.c  updateTransformMatrix.c
src/imgui/: cimgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/math/: float.c  matrix.c  vector.c
src/mesh/: mesh.c
src/render/: framebuffer.c  material.c  model.c  shader.c  skybox.c  vkBase.c  vkBuffer.c  vkCommandBuffer.c  vkDevice.c  vkDraw.c  vkPipeline.c  vkSwapchain.c  vkSync.c
src/shaders/: default_f.glsl  default_v.glsl
src/structure/: hashtable.c
